# REALM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/: processors.py  truthfulness_dataset.py
inference/: predictor.py
models/: nim_reward.py  qrm_reward.py
rlhf/: dpo_huggingface.py  dpo_integration.py  ppo_huggingface.py  ppo_integration.py
utils/: embedding_utils.py  validation.py
