
[project]
name = "REALM"
version = "1.0.0" 
dependencies = ["torch", "transformers", "accelerate", "google-genai", "datasets", "peft", "trl", "wandb", "pandas", "numpy", "scikit-learn", "pydantic", "tqdm", "python-dotenv", "fastapi", "uvicorn", "requests", "openai", "sentence-transformers"]
requires-python = ">=3.13"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
